Importación XML sustitutiva y recálculo de tipos de usuario…